--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "StickerSmash",
-    "slug": "StickerSmash",
+    "name": "VanLifePro",
+    "slug": "VanLifePro",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
