--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web" 
-    
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@react-native-material/core": "^1.3.7",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "styled-components": "^6.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
