--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@mui/styled-engine-sc": "^5.12.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-material/core": "^1.3.7",
-    "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-web": "~0.18.10",
-    "styled-components": "^6.0.0-rc.2"
+    "@react-navigation/bottom-tabs": "6.3.1",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/native-stack": "6.6.1",
+    "@react-navigation/stack": "6.2.1",
+    "expo": "~47.0.14",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.0.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
