--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "@react-navigation/native-stack": "6.6.1",
     "@react-navigation/stack": "6.2.1",
     "expo": "~47.0.14",
+    "expo-av": "~13.0.3",
+    "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
+    "expo-modules-core": "^1.2.7",
+    "expo-sharing": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^5.4.2",
+    "react-native-maps": "1.3.2",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~2.12.0",
@@ -31,9 +37,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-video": "^5.2.1",
-    "react-native-web": "~0.18.9",
-    "expo-av": "~13.0.3",
-    "expo-constants": "~14.0.2"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
