--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "^1.19.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/native": "6.0.10",
@@ -22,7 +22,7 @@
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
-    "expo-modules-core": "^1.2.7",
+    "expo-modules-core": "~1.1.1",
     "expo-sharing": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
