--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^5.4.2",
     "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~2.12.0",
