--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "6.6.1",
     "@react-navigation/stack": "6.2.1",
     "base-64": "^1.0.0",
+    "date-fns": "^2.30.0",
     "expo": "~47.0.14",
     "expo-av": "~13.0.3",
     "expo-constants": "~14.0.2",
